--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,61 @@
+1.4.3
+    Contributions:
+    purelygrey
+        Per-project option for soft clipping the output (#145)
+        * Per-project option for soft clipping the output
+        * Multiple clipping modes
+        Remove drawing optimization that causes flashing in Song view (#147)
+        * Removed drawing optimization that caused flashing in Song view
+
+    clsource
+        Scales
+        * implementation by @maksmakes
+        * instrumentation by clsource
+
+    simotek
+        Add color options for Border Play and Mute (#143)    
+        * Adds different color for the > play and _ mute indicators
+        Fix rg35xx mapping (#139)            
+        * rshoulder and lshoulder were the wrong way
+
+
+    Post-clipping attenuation (#148)
+    * Post-clipping volume adjustment
+    
+    Copy columns (#141)
+    * Enables copying fx+params into any column in tables and phrases
+      Pasting fx into notes column etc does nothing
+
+    Nudge functionality (#130)
+    * In Project view, select tempo and hold B+LEFT/RIGHT to nudge slower/faster
+    * In Song view, pressing LT+LEFT/RIGHT will do the same
+    
+    Printable fx in InstrumentView (#155)
+    * Uses ffmpeg to print reverb to currently selected sample and swap for sample with reverb
+    
+    Other:
+        Add line-by-line clang format (#144)
+        Check uploads artifacts (#138)
+        Globally accessible notifications (#137)
+        Update to github actions checkout@v4.1.7 (#136)
+
+    Fixes:
+    Bug in chainview: column warping (#134)
+    Jumping below lowest row would cause infinite loop
+    Jumping from row 0 was not possible in chainview
+    Limit jump to maximum lowest populated row
+    Set songview b jumping length to 16 rows in correspondence with LSDJ and M8
+    
+    Issue in deep clone (#135)
+    Was possible to accidentally deep clone position into
+    another position
+
+    Fix build error for Raspi (#133)
+    Restore 32bit linux config
+
+    Crash when nudging below 0 BPM (shoutout @merumerutho) https://github.com/djdiskmachine/LittleGPTracker/issues/127
+
+
 1.4.2
     Contributions:
     koisignal
