Concurrentqueue-based MIDI for multithreaded systems (#194)
Replace locking with non-locking queue (requires C++11)
For single-thread systems, do it the old way

* Unique flag for multithread MIDI
* Fix outdated dockerfile for Garlic
* Use single-quoted block for bash -c in garlic job
* Fixes wget missing URL

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -49,6 +49,7 @@
         Update to github actions checkout@v4.1.7 (#136)
 
     Fixes:
+    Fix audio randomly dying (#194)
     Long sample names causing crashes in InstrumentView (#189)
     Bug in chainview: column warping (#134)
     Jumping below lowest row would cause infinite loop
@@ -65,6 +66,7 @@
     Restore 32bit linux config
 
     Crash when nudging below 0 BPM (shoutout @merumerutho) https://github.com/djdiskmachine/LittleGPTracker/issues/127
+    Fixed Garlic docker being outdated (#194)
 
 
 1.4.2
