--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-1.5.0
+1.5.0-bacon3
     Contributions:
     purelygrey
         Per-project option for soft clipping the output (#145)
@@ -55,6 +55,7 @@
     Fixes:
     Fix audio randomly dying (#194)
     Long sample names causing crashes in InstrumentView (#189)
+    Sample names that start with the same characters get mixed up InstrumentView (#199)
     Bug in chainview: column warping (#134)
     Jumping below lowest row would cause infinite loop
     Jumping from row 0 was not possible in chainview
