--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,11 @@
-1.6.0-bacon0
+1.6.0-bacon1
     Contributions:
     drbscl
         Add 64 bit soundfont support (#211)
 
     Fixes:
     Add 64 bit soundfont support (#211)
+    Skip randomly generated project name if a directory with that name already exists (#175)
 
 1.5.0-bacon3
     Contributions:
